--- a/views/blogs/index.html
+++ b/views/blogs/index.html
@@ -36,7 +36,7 @@
             <?php  foreach($blog as $b):     ?>
             <tr>
                 <td><?=$b['id']?></td>
-                <td><?=$b['title']?></td>
+                <td><a href="/contents/<?=$b['id']?>.html" target="_blank"><?=$b['title']?></a></td>
                 <td><?=$b['created_at']?></td>
                 <td><?=$b['update_at']?></td>
                 <td><?=$b['display']?></td>
