--- a/views/blogs/index.html
+++ b/views/blogs/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-
+        <?php view('common.nav') ?>
     <form >
         关键词
         <input type="text" name="keywords" value="<?=@$_GET['keywords'] ?>">
@@ -26,25 +26,38 @@
     <table border="1"   >
             <tr>
                 <th>编号</th>
-                <th width="50%">标题</th>
+                <th width="40%">标题</th>
                 <th>发布时间</th>
                 <th>最近修改</th>
                 <th>阅读量</th>
                 <th>是否显示</th>
+                <th>操作</th>
 
             </tr>
             <?php  foreach($blog as $b):     ?>
             <tr>
                 <td><?=$b['id']?></td>
+                <?php if($b['is_show']==1): ?>
                 <td><a href="/contents/<?=$b['id']?>.html" target="_blank"><?=$b['title']?></a></td>
+                <?php else: ?>
+                <td><a href="/blog/content?id=<?=$b['id'] ?>" target="_blank"><?=$b['title']?></a></td>
+                <?php endif;?>
                 <td><?=$b['created_at']?></td>
                 <td><?=$b['update_at']?></td>
                 <td><?=$b['display']?></td>
                 <td><?=$b['is_show']?></td>
+                <td> <form action="/blog/delete" method="post"> 
+                        <?php csrf_filed()?>
+                        <input type="hidden" name="id" value="<?=$b['id']?>">
+                        <input type="submit" value="删除">
+                    </form> <a href="/blog/eidt?id=<?=$b['id']?>">修改</a></td>
+                    
             </tr>
             <?php endforeach;?>
     </table>
     <br><br>
     <?=$str?>
+    <?php view('common.foot') ?>
+
 </body>
 </html>
