--- a/views/user/face.html
+++ b/views/user/face.html
@@ -5,18 +5,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .img-container {
+            width: 500px;
+            height: 500px;
+            float:left;
+        }
+        .img-preview {
+            float: left;
+            overflow: hidden;
+            margin-left: 20px;
+        }
+        .preview-lg {
+            width: 240px;
+            height: 240px;
+        }
+        .preview-md {
+            width: 80px;
+            height: 80px;
+        }
+        </style>
+
 </head>
 <body>
         <?php view('common.nav') ?>
-    <form action="/user/uploaderImages" enctype="multipart/form-data" method="post">
+    <form action="/user/setface" enctype="multipart/form-data" method="post">
+        <!--  显示原图  -->
+        <div class="img-container">
+            <img id="image" src="" alt="Picture">
+        </div>
+
+        <!-- 预览图片    -->
+        <div class="docs-preview clearfix">
+            <div class="img-preview peview-lg"></div>
+            <div class="img-preview preview-md"></div>
+        </div>
+        <div>
         上传文件
-        <input type="file" id="img" name="images" ><br>
-
-
+        <input type="file" id="img" name="face" ><br>
+        </div>
+        <div>
             <?php csrf_filed()?>
             <input type="submit" value="上传">
-          
+        </div>
+        <input type="text" name="x" id="x">
+        <input type="text" name="y" id="y">
+        <input type="text" name="w" id="w">
+        <input type="text" name="h" id="h">
+        注意  这四个值不可为0
     </form>
     <?php view('common.foot') ?>
 </body>
 </html>
+<link rel="stylesheet" href="/cropper/cropper.min.css">
+
+<script src="/cropper/cropper.min.js"></script>
+
+<script>
+    // 选中图片
+    var $image = $('#image')
+    
+    var x = $("#x")
+    var y = $("#y")
+    var w = $("#w")
+    var h = $("#h")
+    
+    // 当选择图片时触发函数
+    $("#img").change(function(){
+    
+        /* 预览图片 */
+        // this.files ： 当前选中的图片数组
+        // 把选中的图片转成字符串（图片的临时地址，在浏览器中可以直接访问并显示图片）
+        var url = getObjectUrl( this.files[0] )    
+        // 把图片的地址设置到 img 标签的 src 属性上
+        $image.attr('src', url)
+    
+        // 先消毁原插件 
+        $image.cropper("destroy")
+    
+        /* 启动 cropper 插件 */
+        $image.cropper({
+            aspectRatio: 1,                              // 缩略图1:1的比例
+            preview:'.img-preview',                      // 显示缩略图的框
+            viewMode:3,                                  // 显示模式
+            // 裁切时触发事件
+            crop: function(event) {
+                x.val(event.detail.x);             // 裁切区域左上角x坐标
+                y.val(event.detail.y);             // 裁切区域左上角y坐标
+                w.val(event.detail.width);         // 裁切区域宽高
+                h.val(event.detail.height);        // 裁切区域高度
+            }
+        })
+    
+    });
+    
+    // 预览时需要使用下面这个函数转换一下(为了兼容不同的浏览器，所以要判断支持哪一种函数就使用哪一种)
+    function getObjectUrl(file) {
+        var url = null;
+        if (window.createObjectURL != undefined) {
+            url = window.createObjectURL(file)
+        } else if (window.URL != undefined) {
+            url = window.URL.createObjectURL(file)
+        } else if (window.webkitURL != undefined) {
+            url = window.webkitURL.createObjectURL(file)
+        }
+        return url
+    }
+    
+    </script>
